# finalproject-Tonkushin-M25-555

./: .gitignore  README.md  demo.cast  main.py  pyproject.toml
data/: exchange_rates.json  portfolios.json  rates.json  users.json
finalproject_tonkushin_m25_555/: __init__.py  main.py
valutatrade_hub/: __init__.py  decorators.py  logging_config.py
valutatrade_hub/cli/: __init__.py  interface.py
valutatrade_hub/core/: __init__.py  currencies.py  decorators.py  exceptions.py  logging_config.py  models.py  settings.py  usecases.py  utils.py
valutatrade_hub/infra/: __init__.py  database.py  settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
