[tool.poetry]
name = "finalproject-tonkushin-m25-555"
version = "0.1.0"
description = "Консольное приложение валютного кошелька"
authors = ["Tonkushin"]
readme = "README.md"
packages = [{include = "valutatrade_hub"}]

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.0.0"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"
tomli = "^2.3.0"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.valutatrade]
# Путь к директории с данными (относительно корня проекта)
data_dir = "data"

# Время жизни курсов в секундах (TTL)
rates_ttl_seconds = 300

# Дефолтная базовая валюта
default_base_currency = "USD"

# Путь к файлу логов
log_file = "logs/app.log"

# Уровень логирования
log_level = "INFO"

